# localez

./: .env.example  .gitignore  README.md  components.json  docker-compose-dev.yml  docker-compose.yml  docker-compose.yml.example  openapi.json  package.json  pyproject.toml  readme.md  svelte.config.js  vite.config.ts
backend/: .gitignore  Dockerfile  Example.xcstrings  alembic.ini  pyproject.toml
backend/alembic/versions/: 0001_initial.py  0002_add_totp_secret.py  0002_project_tokens.py  0003_contributor_settings.py  0004_export_tokens.py  0005_project_members.py  0006_project_public.py  0007_project_branding.py  0007_project_description.py  0008_ai_suggestion.py  0008_comment_auto_generated.py  0009_simplify_proposals.py  0010_proposal_comment.py  0011_localization_value_set_by.py
backend/app/: config.py  logging_config.py  main.py  version.py
backend/app/core/: limiter.py  prefill_events.py  security.py
backend/app/dependencies/: auth.py  project_access.py  project_token.py
backend/app/models/: __init__.py  localization.py  passkey.py  project.py  project_language.py  project_member.py  project_token.py  string_key.py  translation_proposal.py  user.py
backend/app/routers/: __init__.py  auth.py  config.py  (+5 more)
backend/tests/: conftest.py  test_ai_translation.py  test_auth.py  test_auth_cookie.py  test_passkey.py  test_project_description.py  test_project_members.py  test_project_permissions.py  test_project_tokens.py  test_projects_extended.py  test_projects_icon.py  test_proposals.py  test_public_private.py  test_strings.py  test_users.py  test_xcstrings.py
(+140 files in other folders)
